# thianthrenation_prediction

./: AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  pattch_env.yml  pyproject.toml
examples/publication_test_set/: testset_35.csv
examples/sample_run/: sample_input.csv
pattch/: __init__.py  __main__.py  pattch.py
pattch/featurizer/: conformer_pipeline.py  finalization.py  morfeus_rdkit.py  multiwfn_.py  ortho_meta_para.py  qmdesc_.py  xtb_.py
pattch/model/: _readme_files.txt  _readme_vis.txt  model.pkl  model_pipeline.pkl  prediction.py  visualization.py
pattch/utils/: check_dependencies.py  preprocessor.py  xyz.py
